fixed form overlapped navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,6 +17,7 @@ ul {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
 }
 
 .topbar {
